--- a/app/views/impact_cards/_danger_zone.html.erb
+++ b/app/views/impact_cards/_danger_zone.html.erb
@@ -31,7 +31,7 @@
         <%= custom_label_tag 'Merge impact cards' %>
         <div class="mt-2">
           <p class="text-sm/6 text-gray-600 dark:text-gray-400">Merge another impact card and all its associated data into this card.</p>
-          <div class="flex justify-end">
+          <div class="flex justify-end mt-2">
             <%=
               link_to 'Merge Cards',
               new_impact_card_merge_path(impact_card),
