--- a/app/views/impact_cards/edit.html.erb
+++ b/app/views/impact_cards/edit.html.erb
@@ -4,28 +4,8 @@
   <%= form_with model: @scorecard, url: impact_card_path(@scorecard), scope: :impact_card, class: 'mx-auto max-w-4xl' do |form| %>
     <%= render 'form_header', record: @scorecard %>
     <%= render 'form_body' do %>
-      <%= render 'section', first_section: true do %>
-        <%= render 'section_header', title: 'Overview', subtitle: 'General settings this impact card.' %>
-        <%= render 'section_body' do %>
-          <div class="sm:col-span-4">
-            <%= form.label :name %>
-            <div class="mt-2">
-              <%= form.text_field(:name, placeholder: 'Card name', autofocus: true, required: true) %>
-            </div>
-          </div>
-
-          <div class="col-span-full">
-            <%= form.label :description %>
-            <div class="mt-2">
-              <%= form.text_area :description, rows: 3, placeholder: '' %>
-            </div>
-            <p class="text-sm/6 text-gray-600 dark:text-gray-400">A brief description of the impact card (optional).</p>
-          </div>
-        <% end %>
-      <% end %>
-
+      <%= render 'overview_section', form: %>
       <%= render 'context_section', form: %>
-
       <%= render 'form_buttons', form:, cancel_path: @scorecard.persisted? ? impact_card_path(@scorecard) : impact_cards_path %>
     <% end %>
   <% end %>
