--- a/app/views/impact_cards/new.html.erb
+++ b/app/views/impact_cards/new.html.erb
@@ -2,26 +2,7 @@
   <%= form_with model: @impact_card, url: impact_cards_path, scope: :impact_card, class: 'mx-auto max-w-4xl' do |form| %>
     <%= render 'form_header', title: 'New Impact Card - Initial Setup' %>
     <%= render 'form_body' do %>
-      <%= render 'section', first_section: true do %>
-        <%= render 'section_header', title: 'Overview', subtitle: 'General settings this impact card.' %>
-        <%= render 'section_body' do %>
-          <div class="sm:col-span-4">
-            <%= form.label :name %>
-            <div class="mt-2">
-              <%= form.text_field(:name, placeholder: 'Card name', autofocus: true, required: true) %>
-            </div>
-          </div>
-
-          <div class="col-span-full">
-            <%= form.label :description %>
-            <div class="mt-2">
-              <%= form.text_area :description, rows: 3, placeholder: '' %>
-            </div>
-            <p class="text-sm/6 text-gray-600">A brief description of the impact card (optional).</p>
-          </div>
-        <% end %>
-      <% end %>
-
+      <%= render 'overview_section', form: %>
       <%= render 'section' do %>
         <%= render 'section_header', title: 'Data Collection', subtitle: 'Choose a data model to track activity.' %>
         <%= render 'section_body' do %>
