--- a/app/views/organisations/_form.html.erb
+++ b/app/views/organisations/_form.html.erb
@@ -3,7 +3,7 @@
     <%= render 'form_header', record: organisation %>
     <%= render 'form_body' do %>
       <%= render 'section', first_section: true do %>
-        <%= render 'section_header', title: 'Overview', subtitle: 'General settings this stakeholder.' %>
+        <%= render 'section_header', title: 'Overview', subtitle: 'General settings for this stakeholder.' %>
         <%= render 'section_body' do %>
           <div class="sm:col-span-4">
             <%= form.label :name %>
