--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,7 +3,7 @@
     <%= render 'form_header', record: user %>
     <%= render 'form_body' do %>
       <%= render 'section', first_section: true do %>
-        <%= render 'section_header', title: 'Overview', subtitle: 'General settings this user.' %>
+        <%= render 'section_header', title: 'Overview', subtitle: 'General settings for this team member.' %>
         <%= render 'section_body' do %>
           <div class="sm:col-span-4">
             <%= form.label :name %>
@@ -15,16 +15,19 @@
           </div>
 
           <div class="sm:col-span-4">
-            <%= form.label :email, 'Email (read only)' %>
+            <%= form.label :email, 'Email' %>
             <div class="mt-2">
-              <%= form.text_field :email, disabled: true, read_only: true %>
+              <%= form.text_field :email, disabled: true, read_only: true, class: 'bg-slate-200 dark:bg-slate-600' %>
+              <div class="h-2 mt-2 mb-4 text-xs text-gray-600 dark:text-gray-400">
+                Note: Email address is read-only. If a change is required, please contact a system administrator.
+              <div>
             </div>
           </div>
         <% end %>
       <% end %>
 
       <%= render 'section' do %>
-        <%= render 'section_header', title: 'Other Settings', subtitle: 'Select a category for the stakeholder.' %>
+        <%= render 'section_header', title: 'Other Settings', subtitle: 'Set the time zone for this team member.' %>
         <%= render 'section_body' do %>
           <div class="sm:col-span-4">
             <%= form.label :time_zone %>
@@ -37,7 +40,7 @@
 
       <%- if policy(user).change_account_role? || policy(User).invite_with_system_role? %>
         <%= render 'section' do %>
-          <%= render 'section_header', title: 'Role', subtitle: 'Access levels for this user.' %>
+          <%= render 'section_header', title: 'Role', subtitle: 'Access levels for this team member.' %>
           <%= render 'section_body' do %>
             <%- if policy(User).invite_with_system_role? %>
               <div class="sm:col-span-4">
