--- a/app/views/layouts/shared/_sidebar_desktop.html.erb
+++ b/app/views/layouts/shared/_sidebar_desktop.html.erb
@@ -1,8 +1,8 @@
 <div class="fixed inset-y-0 left-0 w-60 max-lg:hidden bg-zinc-950 print:hidden">
   <div class="flex h-full min-h-0 flex-col">
-    <div class="flex items-center border-b border-zinc-950/5 p-4 dark:border-white/5 mt-2.5">
+    <div class="flex items-center p-5 dark:border-white/5 mt-2.5 ml-5">
       <%= image_tag 'logo-small.png', class: 'h-7 w-7', alt: "Logo for 'Obsekio', the tool for systemic change" %>
-      <span class="ml-2 text-white font-extrabold text-lg">Obsekio</span>
+      <span class="ml-2 text-white font-extrabold text-2xl">Obsekio</span>
     </div>
     <nav class="flex h-full min-h-0 flex-col">
       <ul role="list" class="flex flex-1 flex-col overflow-y-auto p-4">
