--- a/app/views/layouts/shared/_sidebar_desktop.html.erb
+++ b/app/views/layouts/shared/_sidebar_desktop.html.erb
@@ -40,12 +40,14 @@
             <% end %>
 
             <%= dropdown_menu_content do %>
-             <%=
-                dropdown_menu_item do
-                  link_to "#{current_account.name} &checkmark;".html_safe, account_path(current_account), class: "block w-full text-sm"
-                end
-              %>
-              <%- current_user.accounts.where.not(id: current_account.id).limit(4).each do |account| %>
+              <% if current_account.present? %>
+                <%=
+                  dropdown_menu_item do
+                    link_to "#{current_account.name} &checkmark;".html_safe, account_path(current_account), class: "block w-full text-sm"
+                  end
+                %>
+              <% end %>
+              <%- current_user.accounts.where.not(id: current_account&.id).limit(4).each do |account| %>
                 <%= dropdown_menu_item do %>
                   <%= link_to account.name, switch_account_path(account), class: "block w-full text-sm" %>
                 <% end %>
