oob updated contact page copy

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -18,7 +18,7 @@
       <h1 class="mt-10 text-4xl font-bold tracking-tight text-white sm:text-6xl">Obsekio</h1>
       <h2 class="mt-10 text-3xl font-bold tracking-tight text-white sm:text-4xl">Tell us about your project</h2>
       <p class="mt-6 text-lg leading-8 text-gray-300">
-        Tackle the toughest challenges with Obsekio, the Tool for Systemic Change. Create lasting solutions through evidence-based planning and collaboration.
+        Talk to us about your project. What changes are you trying to achieve? What are the challenges you face? How can we help?
       </p>
     </div>
 
