--- a/app/views/contact_mailer/contact.html.erb
+++ b/app/views/contact_mailer/contact.html.erb
@@ -1,3 +1,5 @@
-<%= @name %>
-<%= @email %>
-<%= @message %>
+<h1>Contact</h1>
+<p>Name: <%= @name %></p>
+<p>Email: <%= @email %></p>
+<p>Message:</p>
+<p><%= @message %></p>
