oob resized contact form

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="relative isolate overflow-hidden h-screen">
+<div class="relative isolate overflow-hidden min-h-screen">
   <div class="text-left mt-10 ml-10">
     <%= 
       link_to(
