--- a/app/views/layouts/shared/_sidebar_desktop.html.erb
+++ b/app/views/layouts/shared/_sidebar_desktop.html.erb
@@ -25,7 +25,7 @@
             <%= render_sidebar_item title: 'Subsystem Tags', path: labels_subsystem_tags_path, icon: :tags, active_group: :subsystem_tags %>
           </ul>
         </li>
-        <li class="mt-auto">
+        <li class="mt-auto" data-controller="switch-workspace">
           <%= render_dropdown_menu do %>
             <%= dropdown_menu_trigger do %>
               <div class="group flex justify-between gap-x-3 rounded-md -mx-2 p-2 text-sm font-semibold leading-6 text-gray-400 hover:bg-gray-800 hover:text-white">
@@ -49,13 +49,20 @@
               <% end %>
               <%- current_user.accounts.where.not(id: current_account&.id).limit(4).each do |account| %>
                 <%= dropdown_menu_item do %>
-                  <%= link_to account.name, switch_account_path(account), class: "block w-full text-sm" %>
+                  <%= 
+                    link_to(
+                      account.name, 
+                      switch_account_path(account), 
+                      class: "block w-full text-sm",
+                      data: { action: 'click->switch-workspace#handleClick' }
+                    ) 
+                  %>
                 <% end %>
               <% end %>
 
               <%=
                 dropdown_menu_item do
-                  link_to "Other accounts...", accounts_path, class: "block w-full text-sm"
+                  link_to "Other workspaces...", accounts_path, class: "block w-full text-sm"
                 end
               %>
               <hr/>
