oob cleaned up colors

--- a/app/views/initiatives/_form.html.erb
+++ b/app/views/initiatives/_form.html.erb
@@ -47,7 +47,7 @@
       </div>
 
       <div class="grid grid-cols-1 gap-x-8 gap-y-10 border-b border-gray-900/10 dark:border-white/10 pb-12 md:grid-cols-3">
-        <div>t
+        <div>
           <h2 class="text-base/7 font-semibold text-zinc-950 dark:text-white">Contact Details</h2>
           <p class="mt-1 text-sm/6 text-gray-600 dark:text-gray-400">Enter the main contact for this initiative (optional).</p>
         </div>
