--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -12,7 +12,7 @@
         <%= yield %>
       </div>
       <div class="py-2 mt-auto flex justify-end">
-        <%= f.submit 'Download', class: 'bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2' %>
+        <%= f.submit 'Download', class: 'bg-indigo-600 dark:bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2' %>
       </div>
     <% end %>
   </div>
