--- a/app/views/checklist_items/_form_actions.html.erb
+++ b/app/views/checklist_items/_form_actions.html.erb
@@ -6,7 +6,7 @@
         impact_card_id: checklist_item.scorecard.id,
         id: checklist_item.initiative.id
       ),
-      class: 'rounded-md border border-gray-500 bg-white dark:bg-zinc-950 px-3 py-2 text-sm font-semibold text-zinc-950 dark:text-white shadow-sm hover:bg-zinc-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-500'
+      class: 'text-sm font-semibold text-gray-900 dark:text-white mt-2 mr-3'
     ) %>
     <%= form.submit button_title %>
   </div>
