--- a/app/views/checklist_items/_update_existing_form.html.erb
+++ b/app/views/checklist_items/_update_existing_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: checklist_item, local: true) do |form| %>
+<%= form_with(model: checklist_item, local: true, class: 'mb-1') do |form| %>
   <%= hidden_field_tag :action, :update_existing %>
   <div class="grid grid-cols-4 gap-4 w-full">
     <div class="col-span-3">
