--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,19 +16,10 @@
   </div>
   <div class="mx-auto max-w-7xl px-6 pb-16 pt-8 sm:pb-16 lg:flex lg:px-8 lg:pt-40">
     <div class="mx-auto max-w-2xl flex-shrink-0 lg:mx-0 lg:max-w-xl lg:pt-8">
-      <%= image_tag 'logo-small.png', class: 'h-16 w-auto', alt: "Logo for the 'Tool for Systemic Change'" %>
-      <%# <div class="mt-24 sm:mt-32 lg:mt-16">
-        <a href="#" class="inline-flex space-x-6">
-          <span class="rounded-full bg-yellow-500/10 px-3 py-1 text-sm font-semibold leading-6 text-yellow-400 ring-1 ring-inset ring-yellow-500/20">Latest updates</span>
-          <span class="inline-flex items-center space-x-2 text-sm font-medium leading-6 text-gray-300">
-            <span>Just shipped v1.0</span>
-            <svg class="h-5 w-5 text-gray-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-              <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
-            </svg>
-          </span>
-        </a>
-      </div> %>
-      <h1 class="mt-10 text-4xl font-bold tracking-tight text-white sm:text-6xl">Obsekio</h1>
+      <div class="flex items-center gap-x-6">
+        <%= image_tag 'logo-small.png', class: 'h-16 w-auto', alt: "Logo for the 'Tool for Systemic Change'" %>
+        <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">Obsekio</h1>
+      </div>
       <h2 class="mt-10 text-3xl font-bold tracking-tight text-white sm:text-4xl">The Tool for Systemic Change</h2>
       <p class="mt-6 text-lg leading-8 text-gray-300">Tackle the toughest challenges with Obsekio, the Tool for Systemic Change. Create lasting solutions through evidence-based planning and collaboration.</p>
       <div class="mt-10 flex items-center gap-x-6">
