oob fixed branding

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -14,8 +14,7 @@
   </div>
   <div class="mx-auto max-w-7xl px-6 pb-16 pt-8 sm:pb-16 lg:flex lg:px-8 lg:pt-40">
     <div class="mx-auto max-w-2xl flex-shrink-0 lg:mx-0 lg:max-w-xl lg:pt-8">
-      <%= image_tag 'logo-small.png', class: 'h-16 w-auto', alt: "Logo for the 'Tool for Systemic Change'" %>
-      <h1 class="mt-10 text-4xl font-bold tracking-tight text-white sm:text-6xl">Obsekio</h1>
+      <%= render 'branding' %>
       <h2 class="mt-10 text-3xl font-bold tracking-tight text-white sm:text-4xl">Tell us about your project</h2>
       <p class="mt-6 text-lg leading-8 text-gray-300">
         Talk to us about your project. What changes are you trying to achieve? What are the challenges you face? How can we help?
