--- a/app/views/impact_cards/_context_section.html.erb
+++ b/app/views/impact_cards/_context_section.html.erb
@@ -1,5 +1,5 @@
 <%= render 'section' do %>
-  <%= render 'section_header', title: 'Context', subtitle: 'Optionally set Community or Problem / Opportunity indentifiers for this impact card.' %>
+  <%= render 'section_header', title: 'Context', subtitle: 'Optionally set Community or Problem / Opportunity identifiers for this impact card.' %>
   <%= render 'section_body' do %>
     <div class="sm:col-span-6">
       <%= turbo_frame_tag :select_community do %>          
