--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,10 +16,7 @@
   </div>
   <div class="mx-auto max-w-7xl px-6 pb-16 pt-8 sm:pb-16 lg:flex lg:px-8 lg:pt-40">
     <div class="mx-auto max-w-2xl flex-shrink-0 lg:mx-0 lg:max-w-xl lg:pt-8">
-      <div class="flex items-center gap-x-6">
-        <%= image_tag 'logo-small.png', class: 'h-16 w-auto', alt: "Logo for the 'Tool for Systemic Change'" %>
-        <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">Obsekio</h1>
-      </div>
+      <%= render 'branding' %>
       <h2 class="mt-10 text-3xl font-bold tracking-tight text-white sm:text-4xl">The Tool for Systemic Change</h2>
       <p class="mt-6 text-lg leading-8 text-gray-300">Tackle the toughest challenges with Obsekio, the Tool for Systemic Change. Create lasting solutions through evidence-based planning and collaboration.</p>
       <div class="mt-10 flex items-center gap-x-6">
