1140 fixed sorted for organisations and subsystem tags

--- a/app/views/initiatives_subsystem_tags/_subsystem_tag_fields.html.erb
+++ b/app/views/initiatives_subsystem_tags/_subsystem_tag_fields.html.erb
@@ -3,7 +3,7 @@
     <%=
       custom_select_tag(
         'initiative[initiatives_subsystem_tags_attributes][__INDEX__][subsystem_tag_id]',
-        options_from_collection_for_select(policy_scope(SubsystemTag), :id, :name),
+        options_for_subsystem_tag_select,
         include_blank: 'Select a subsystem tag'
       )
     %>
