--- a/app/views/initiatives_organisations/_controls.html.erb
+++ b/app/views/initiatives_organisations/_controls.html.erb
@@ -7,7 +7,7 @@
         <%=
           custom_select_tag(
             "initiative[initiatives_organisations_attributes][#{index}][organisation_id]",
-            options_from_collection_for_select(policy_scope(Organisation), :id, :name, initiatives_organisation.organisation_id),
+            options_for_organisation_select(initiatives_organisation.organisation),
             include_blank: 'Select a stakeholder'
           )
         %>
