--- a/app/views/initiatives_organisations/_organisation_fields.html.erb
+++ b/app/views/initiatives_organisations/_organisation_fields.html.erb
@@ -3,7 +3,7 @@
     <%=
       custom_select_tag(
         'initiative[initiatives_organisations_attributes][__INDEX__][organisation_id]',
-        options_from_collection_for_select(policy_scope(Organisation), :id, :name),
+        options_for_organisation_select,
         include_blank: 'Select a stakeholder'
       )
     %>
