--- a/app/views/initiatives_organisations/create.turbo_stream.erb
+++ b/app/views/initiatives_organisations/create.turbo_stream.erb
@@ -29,7 +29,7 @@
       <%=
         custom_select_tag(
           "initiative[initiatives_organisations_attributes][#{index}][organisation_id]",
-          options_from_collection_for_select(policy_scope(Organisation), :id, :name, @organisation.id),
+          options_for_organisation_select(@organisation),
           include_blank: 'Select a stakeholder',
         )
       %>
