--- a/app/views/initiatives_subsystem_tags/_controls.html.erb
+++ b/app/views/initiatives_subsystem_tags/_controls.html.erb
@@ -7,7 +7,7 @@
         <%=
           custom_select_tag(
             "initiative[initiatives_subsystem_tags_attributes][#{index}][subsystem_tag_id]",
-            options_from_collection_for_select(policy_scope(SubsystemTag), :id, :name, initiatives_subsystem_tag.subsystem_tag_id),
+            options_for_subsystem_tag_select(initiatives_subsystem_tag.subsystem_tag),
             include_blank: 'Select a subsystem tag'
           )
         %>
