--- a/app/views/contacts/terms.html.erb
+++ b/app/views/contacts/terms.html.erb
@@ -2,8 +2,8 @@
   <div class="text-left mt-10 ml-10">
     <%= 
       link_to(
-        "< Back", 
-        root_path, 
+        "< Back to Terms & Conditions", 
+        terms_path, 
         class: 'text-lg font-semibold leading-6 text-white bg-teal-900 hover:bg-teal-700 px-4 py-2 rounded', 
         data: { turbo: false }
       )
@@ -15,9 +15,9 @@
   <div class="mx-auto max-w-7xl px-6 pb-16 pt-8 sm:pb-16 lg:flex lg:px-8 lg:pt-40">
     <div class="mx-auto max-w-2xl flex-shrink-0 lg:mx-0 lg:max-w-xl lg:pt-8">
       <%= render 'branding' %>
-      <h2 class="mt-10 text-3xl font-bold tracking-tight text-white sm:text-4xl">Tell us about your project</h2>
+      <h2 class="mt-10 text-3xl font-bold tracking-tight text-white sm:text-4xl">Terms and Conditions Query</h2>
       <p class="mt-6 text-lg leading-8 text-gray-300">
-        Talk to us about your project. What changes are you trying to achieve? What are the challenges you face? How can we help?
+        Please let us know if you have any questions or concerns about our terms and conditions.
       </p>
     </div>
 
