--- a/app/views/home/privacy.html.erb
+++ b/app/views/home/privacy.html.erb
@@ -13,7 +13,7 @@
     <div class="text-white bg-teal-900 rounded-lg p-8 w-full">
       <h2 class="text-3x1 font-bold leading-10">Preamble</h2>
       <p class="my-4 text-gray-300">        
-        We, the architects and stewards of this digital platform, recognize the fundamental rights of all users to participate 
+        We, the architects and stewards of this digital platform, recognise the fundamental rights of all users to participate 
         in online spaces that respect their privacy, dignity, and well-being. This Privacy Policy establishes the principles 
         and standards that shall govern the development and operation of our platform.
       </p>
@@ -42,7 +42,7 @@
       <p class="my-4 text-gray-300">
         We use the collected data to:
         <ul class="list-disc list-inside mb-4">
-          <li>Provide and personalize our services.</li>
+          <li>Provide and personalise our services.</li>
           <li>Improve user experience and platform functionality.</li>
           <li>Communicate with users regarding updates and support.</li>
         </ul>
@@ -71,7 +71,7 @@
 
       <h2 class="text-3x1 font-bold leading-10">5. Data Security</h2>
       <p class="my-4 text-gray-300">
-        We implement robust security measures to protect user data from unauthorized access, alteration, or destruction. 
+        We implement robust security measures to protect user data from unauthorised access, alteration, or destruction. 
         This includes encryption, secure servers, and regular security audits.
       </p>  
 
@@ -89,7 +89,7 @@
 
       <h2 class="text-3x1 font-bold leading-10">8. Cookies and Tracking Technologies</h2>
       <p class="my-4 text-gray-300">
-        We use cookies and similar technologies to enhance user experience, analyze site usage, and improve our services. 
+        We use cookies and similar technologies to enhance user experience, analyse site usage, and improve our services. 
         A detailed <%= landing_pages_link_to 'Cookie Policy', cookie_path %> is available for users to review.
       </p>
 
